changed some colors, can edit header image now

--- a/skatehub/src/pages/home/home.html
+++ b/skatehub/src/pages/home/home.html
@@ -39,7 +39,7 @@
   <!-- If no spots have been posted - START -->
   <ion-row *ngIf="noSpots" style="height: 50vh;" justify-content-center>
     <ion-col align-self-center offset-4>
-      <h1 style="color: #9E9E9E;">No spots</h1>
+      <h1 style="color: #c0c0c0;">No spots</h1>
     </ion-col>
   </ion-row>
   <!-- If no spots have been posted - END -->
