--- a/skatehub/src/pages/message/message.html
+++ b/skatehub/src/pages/message/message.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>New Message</ion-title>
     <ion-buttons end right (tap)="openThreadPage()">
       <button [disabled] = "ableToStartThread" ion-button icon-only padding-right>
