--- a/skatehub/src/pages/add-friend/add-friend.html
+++ b/skatehub/src/pages/add-friend/add-friend.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Find Friends</ion-title>
   </ion-navbar>
 
@@ -35,7 +35,7 @@
       <ion-icon *ngIf="searchUser.checked" name="checkmark" item-end></ion-icon>
     </ion-item>
   </ion-list>
-  
+
   <ion-list *ngIf="selectedUsers.length > 0">
     <ion-list-header>
       Recipients
