--- a/skatehub/src/pages/settings/settings.html
+++ b/skatehub/src/pages/settings/settings.html
@@ -6,66 +6,109 @@
 -->
 <ion-header>
 
-  <ion-navbar color="white">
-    <ion-title ion-text color="primary">Settings</ion-title>
+  <ion-navbar color="primary">
+    <ion-buttons start>
+      <button ion-button clear (tap)="dismiss()">
+        Cancel
+      </button>
+    </ion-buttons>
+    <ion-title ion-text color="primary">Edit Profile</ion-title>
+    <ion-buttons end (tap)="checkChanges()">
+      <button [disabled]="!changeMade" ion-button clear>
+        <strong>Save</strong>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-  <ion-row justify-content-center class="top-spacing">
+<ion-content>
+
+  <div class ="square-background" [ngStyle]="setBackground()" (tap)="openEditHeaderAS()">
+  </div>
+  <!-- <ion-buttons> -->
+    <button id="headerCam" *ngIf="headerImageChosen == 0" ion-button large icon-only clear (tap)="openEditHeaderAS()">
+      <ion-icon color="white" name="camera-outline"></ion-icon>
+    </button>
+  <!-- </ion-buttons> -->
+  <ion-row class="top-spacing" *ngIf="user">
+      <ion-avatar class= "profile-shift">
+        <button id="profileCam" *ngIf="imageChosen == 0" ion-button icon-only clear (tap)="openEditAvatarAS()">
+          <ion-icon color="white" name="camera-outline"></ion-icon>
+        </button>
+        <img [src]="imagePath" class = "avatar-border">
+      </ion-avatar>
+      <ion-list padding-top style="width: 100%;">
+        <ion-item>
+          <ion-label color="dark" fixed>Name</ion-label>
+          <ion-input type="text" (ionChange)="toggleSaveBtn()" [(ngModel)]="fullName" name = "fullName"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label color="dark" fixed>Username</ion-label>
+          <ion-input type="text" (ionChange)="toggleSaveBtn()" [(ngModel)]="username" name="username"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label color="dark" fixed>Email</ion-label>
+          <ion-input type="text" (ionChange)="toggleSaveBtn()" [(ngModel)]="email" name="email"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label color="dark" fixed>Stance</ion-label>
+          <ion-select [(ngModel)]="stance" (ionChange)="toggleSaveBtn()">
+            <ion-option value="Goofy">Goofy</ion-option>
+            <ion-option value="Regular">Regular</ion-option>
+            <ion-option value="None">None</ion-option>
+          </ion-select>
+        </ion-item>
+        <ion-list-header padding-top>
+          Notification Settings
+        </ion-list-header>
+         <ion-item>
+           <ion-label>Allow Notifications</ion-label>
+           <ion-toggle checked="true"></ion-toggle>
+         </ion-item>
+         <ion-list-header padding-top>
+           Privacy Settings
+         </ion-list-header>
+         <ion-item detail-push (tap)="pushEditPasswordPage()">
+           Edit Password
+         </ion-item>
+         <ion-item detail-push (tap)="pushPrivacyPolicyPage()">
+           Privacy Policy
+         </ion-item>
+         <ion-item detail-push (tap)="pushAccountSettingsPage()">
+           User Data
+         </ion-item>
+      </ion-list>
+      <button ion-button icon-left block strong style="background-color: transparent; color: #f53d3d;" (tap) = "logout()" color = "danger">
+        <ion-icon name = "exit"></ion-icon>
+        Logout
+      </button>
+  </ion-row>
+
+
+
+  <!-- <ion-row justify-content-center class="top-spacing">
       <ion-avatar *ngIf="user" class= "profile-shift">
-        <!-- I don't know if the ngClass is going to work when we allow users to
-        upload their own avatar. What it is supposed to do is, assign the proper
-        css class depending on if the user has the default avatar or their own.
-        If the user has a default, we give the avatar a border for styling.
-       -->
         <img [src]="user.avatar"
          [ngClass] = "user.avatar == 'assets/imgs/profileGeneric.jpg' ? 'avatar-border' : 'avatar-uniq'">
       </ion-avatar>
-      <!-- <ion-icon name="create" mode="android" ios="md-create" class="edit-icon" style="position: relative"></ion-icon> -->
-      <!-- <ion-icon name="remove-circle" color="danger" style="font-size: 30px;"></ion-icon> -->
   </ion-row>
-  <!-- =====Input fields======== -->
-  <!-- <div text-center *ngIf="user"> -->
+
   <ion-list *ngIf="user" padding-top>
     <ion-list-header>
       Profile Information
     </ion-list-header>
     <ion-item>
       <ion-label floating color ="primary">Full Name</ion-label>
-      <!-- [disabled] attribute will be set dynamically according
-      to the fNReadOnly boolean var in the .ts file.
-      Meaning, if the fNReadOnly = true, then the input field won't allow
-      typing. If the fNReadOnly = false, then the input field is editable
-    -->
+
       <ion-input type="text" [(ngModel)]="fullName"
       name="fullName" [disabled] ="fNReadOnly" placeholder="fullName"></ion-input>
 
-      <!-- This is the pencil icon.. It will only be displayed if the
-      temporary var editName is false meaning, the user isn't editing their name.
-      The var editName is created in this html file and not in the ts file.
-      This is for quick logic. If the pencil is 'tap' the toggleReadOnly func
-      is called with the first parameter being 'fullName' and the 2nd parameter
-      being true, meaning, we are editing the fullName input so toggle fNReadOnly
-      variable. The boolean parameter is to toggle the keyboard on the user's
-      phone.
-      -->
         <ion-icon item-end *ngIf="!editName"
           (tap) ="toggleReadOnly('fullName', true); editName = true;"
           name="create" mode="android" ios="md-create" color="primary"
         class="edit-icon"></ion-icon>
-
-
-      <!-- This is a save badge that is displayed after the user taps the pencil
-      icon. If the user taps the save badge, the toggleReadOnly func is called
-      with the first parameter indicating what is being saved so the input
-      field will be changed back to disabled and a boolean value set to false
-      indicating the keyboard should close. The saveChanges func is called
-      with a parameter indicating what is being saved. The editName var is set
-      to false to re-display the pencil icon again.
-     -->
 
        <ion-badge *ngIf="editName"
        (tap)="toggleReadOnly('fullName', false); saveChanges('fullName'); editName = false;"
@@ -73,9 +116,6 @@
 
     </ion-item>
 
-    <!-- Full name field end -->
-
-    <!-- For each of the following fields, the same logic above is applied -->
    <ion-item>
      <ion-label floating color ="primary">Username</ion-label>
      <ion-input type="text"
@@ -113,9 +153,6 @@
     <ion-list-header padding-top>
       Privacy Settings
     </ion-list-header>
-    <!-- When the user wants to edit their Password
-     lets open another page for them to do that.
-   -->
     <ion-item detail-push (tap)="pushEditPasswordPage()">
       Edit Password
     </ion-item>
@@ -127,16 +164,13 @@
     </ion-item>
 
   </ion-list>
-      <!-- Full name field -->
 
-
-  <!-- </div> -->
 
 
   <button ion-button icon-left block strong style="background-color: transparent; color: #f53d3d;" (tap) = "logout()" color = "danger">
     <ion-icon name = "exit"></ion-icon>
     Logout
-  </button>
+  </button> -->
 
 
 </ion-content>
