--- a/skatehub/src/pages/message/message.html
+++ b/skatehub/src/pages/message/message.html
@@ -26,20 +26,16 @@
     <ion-textarea *ngIf="selectedUsers.length>0" elastic type="text" [placeholder]="searchTerm"
       [(ngModel)] = "searchTerm" name = "searchTerm" (ionChange) = "filter(true)"></ion-textarea>
   </ion-item>
-
-  <ion-list *ngIf="selectedUsers.length > 0">
-    <ion-list-header>
-      Recipients
-    </ion-list-header>
-    <ion-item *ngFor="let searchUser of selectedUsers">
-      <ion-avatar item-start>
-        <img [src]="searchUser.avatar">
-      </ion-avatar>
-      <h2>{{searchUser.username}}</h2>
-      <ion-icon *ngIf="!searchUser.checked" name="radio-button-off" item-end></ion-icon>
-      <ion-icon *ngIf="searchUser.checked" name="checkmark" item-end></ion-icon>
-    </ion-item>
-  </ion-list>
+  <ion-grid *ngIf="selectedUsers.length > 0">
+    <ion-row>
+      <ion-col col-3 *ngFor="let searchUser of selectedUsers">
+        <ion-badge>
+          {{searchUser.username}}
+          <ion-icon name="close" (tap)="removeFromSearchList(searchUser);"></ion-icon>
+        </ion-badge>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
   <ion-list *ngIf="userResultArr.length > 0">
     <ion-list-header>
