change navbar colors

--- a/skatehub/src/pages/add-session/add-session.html
+++ b/skatehub/src/pages/add-session/add-session.html
@@ -6,9 +6,9 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-buttons start (tap)="closeModal()">
-      <button color="primary" ion-button icon-only>
+  <ion-navbar color="primary">
+    <ion-buttons padding-left start (tap)="closeModal()">
+      <button color="white" ion-button icon-only>
         <ion-icon name="close"></ion-icon>
       </button>
     </ion-buttons>
