--- a/skatehub/src/pages/detailed-spot/detailed-spot.html
+++ b/skatehub/src/pages/detailed-spot/detailed-spot.html
@@ -1,6 +1,6 @@
 <!-- Header displaying the name of the skate spot -->
 <ion-header no-border>
-  <ion-navbar color="white">
+  <ion-navbar color="primary">
     <!-- <ion-title *ngIf = "spot" >{{spot.name}}</ion-title> -->
   </ion-navbar >
 </ion-header>
