--- a/skatehub/src/pages/thread/thread.html
+++ b/skatehub/src/pages/thread/thread.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title *ngIf="recipients">{{recipients[0].username}}</ion-title>
   </ion-navbar>
 
