--- a/skatehub/src/pages/seshes/seshes.html
+++ b/skatehub/src/pages/seshes/seshes.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Session</ion-title>
     <ion-buttons *ngIf="!hasJoined" end right (tap) = "joinSession()">
       <button ion-button>
