--- a/skatehub/src/pages/home/home.html
+++ b/skatehub/src/pages/home/home.html
@@ -22,6 +22,9 @@
 
 
 <ion-content>
+  <ion-refresher (ionRefresh)="refresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <!-- Start State filter -->
   <ion-row justify-content-center>
     <ion-col offset-6 col-12>
