--- a/skatehub/src/pages/profile/profile.html
+++ b/skatehub/src/pages/profile/profile.html
@@ -1,19 +1,189 @@
 <ion-content>
-  <!-- <ion-row justify-content-center class="top-spacing">
-      <ion-avatar *ngIf="user" class= "profile-shift">
-        <img [src]="imagePath" (tap)="show(imagePath)" style="border-radius: 50%; width: 100px; height: 100px; border: 10px solid #FF8F00;">
-      </ion-avatar>
-      <ion-icon ios="md-create" color="primary" *ngIf="imageChosen == 0" (tap)="chooseImage()" style="font-size: 25px;"></ion-icon>
-      <ion-icon name="remove-circle" color="danger" *ngIf="imageChosen == 1" (tap)="clear()" style="font-size: 30px;"></ion-icon>
-  </ion-row> -->
-<!-- ^^^^ above comments are going to be necessary in the future maybe - DON'T DELETE :) -->
 
-  <!-- Green background - START -->
-  <div class ="square-background">
+  <div *ngIf="user" class ="square-background" [ngStyle]="setBackground()">
   </div>
-  <!-- Green background - END -->
-  <!-- User avatar and info - START -->
-  <ion-row justify-content-center class="top-spacing">
+  <ion-row class="top-spacing" *ngIf="user">
+    <ion-buttons id="edit" (tap) = "settingsPage()">
+      <button style="font-size: .82em" ion-button clear color="secondary">
+        <strong>EDIT</strong>
+      </button>
+    </ion-buttons>
+      <ion-avatar class= "profile-shift">
+        <img [src]="user.avatar" class = "avatar-border">
+      </ion-avatar>
+
+      <ion-item id="username" no-padding style="margin-left: 1.7em;" no-lines>
+          <h2 text-wrap no-padding style="font-size: 1.25em;">{{user.fullName}}</h2>
+      </ion-item>
+      <div class="profile-left">
+        <p ion-text no-margin text-wrap style="font-size: .9em">
+          <strong>{{user.username}}</strong>
+        </p>
+        <!-- TODO Add values like 'karma', 'days been on app', 'etc'-->
+        <p text-wrap ion-text color="darkLHue" style="margin-top: .25em; font-size: .9em;">{{user.stance}} Stance </p>
+        <!-- <p text-wrap style="margin-top: .25em; font-size: .9em;">User bio </p> -->
+      </div>
+  </ion-row>
+  <ion-row>
+    <ion-segment mode="md" [(ngModel)]="categories" color="primary">
+      <ion-segment-button text-capitalize style="font-size: 1.5rem;" value="posts">
+        Posts
+      </ion-segment-button>
+      <ion-segment-button text-capitalize style="font-size: 1.5rem;" value="sessions">
+        Sessions
+      </ion-segment-button>
+      <ion-segment-button text-capitalize style="font-size: 1.5rem;" value="friends">
+        Friends
+      </ion-segment-button>
+    </ion-segment>
+  </ion-row>
+  <div [ngSwitch]="categories" style="height: 100%;">
+    <ion-grid style="background-color: #f0f0f0; height: 100%;" *ngSwitchCase="'posts'">
+      <ion-item id="username" style="background: transparent;" no-lines>
+          <span ion-text style="font-size: .75em; color: #9E9E9E;" (tap)="openSortAS()">
+            <strong>{{sortText}}</strong>
+          </span>
+          <ion-icon style="vertical-align: middle; color: #9E9E9E;"
+          name="md-arrow-dropdown" mode="md" (tap)="openSortAS()"></ion-icon>
+      </ion-item>
+      <ion-row *ngIf="spots && sort">
+          <ion-col *ngFor="let spot of spots" col-4 col-md-3 col-lg-6 col-xl-12>
+            <ion-thumbnail (tap)="openDetailedSpot(spot);">
+              <img [src]="spot.images[0]">
+            </ion-thumbnail>
+          </ion-col>
+      </ion-row>
+      <ion-row *ngIf="savedSpots && !sort">
+          <ion-col *ngFor="let spot of savedSpots" col-4 col-md-3 col-lg-6 col-xl-12>
+            <ion-thumbnail (tap)="openDetailedSpot(spot);">
+              <img [src]="spot.images[0]">
+            </ion-thumbnail>
+          </ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-grid style="height: 100%;" *ngSwitchCase="'sessions'">
+      <ion-row>
+        <ion-buttons start left (tap)="openSessionModal()">
+          <button color="primary" icon-left small ion-button clear>
+            <ion-icon name="add"></ion-icon>
+            <strong>Create Session</strong>
+          </button>
+        </ion-buttons>
+      </ion-row>
+
+      <ion-list *ngIf="!emptyRequests">
+        <ion-list-header>
+          Requests
+        </ion-list-header>
+        <ion-item-sliding *ngFor="let invite of requested">
+          <ion-item no-lines (tap)="pushSeshesPage(invite, false)">
+            <ion-thumbnail item-start>
+              <img [src]="invite.spot.images[0]">
+            </ion-thumbnail>
+            <h2 text-wrap>{{invite.spot.name}}</h2>
+          </ion-item>
+          <ion-item-options side="right">
+            <button ion-button color="success" (tap)="acceptInvite(invite)">
+              <ion-icon name="checkmark"></ion-icon>
+              Going
+            </button>
+          </ion-item-options>
+          <ion-item-options side="left" (tap)="declineInvite(invite)">
+            <button ion-button color="danger">
+              <ion-icon name="close"></ion-icon>
+              Decline
+            </button>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
+      <ion-item-divider *ngIf="!emptyInvites && !emptyRequests">
+      </ion-item-divider>
+      <ion-list *ngIf="!emptyInvites">
+        <ion-list-header>
+          Your Invites
+        </ion-list-header>
+
+        <ion-item no-lines *ngFor="let invite of accepted" (tap)="pushSeshesPage(invite, true)">
+          <ion-thumbnail item-start>
+            <img [src]="invite.spot.images[0]">
+          </ion-thumbnail>
+          <h2 text-wrap>{{invite.spot.name}}</h2>
+        </ion-item>
+      </ion-list>
+    </ion-grid>
+    <ion-grid style="height: 100%;" *ngSwitchCase="'friends'">
+      <ion-row>
+        <ion-buttons (tap)="openAddFriendsPage()">
+          <button color="primary" icon-left small ion-button clear>
+            <ion-icon name="add"></ion-icon>
+            <strong>Find Friends</strong>
+          </button>
+        </ion-buttons>
+      </ion-row>
+
+      <ion-list *ngIf="requests.length > 0">
+        <ion-list-header>
+          Your Friend Requests
+        </ion-list-header>
+        <ion-item-sliding *ngFor="let request of requests">
+          <ion-item id="thread-item" no-lines>
+            <ion-avatar item-start (tap)="avatarClick(friend)">
+              <img [src]="request.avatar">
+            </ion-avatar>
+            <h2>{{request.username}}</h2>
+          </ion-item>
+          <ion-item-options side="left">
+            <button ion-button color="primary" (tap)="acceptFriendRequest(request)">
+              <ion-icon name="checkmark"></ion-icon>
+              Accept
+            </button>
+          </ion-item-options>
+          <ion-item-options side="right">
+            <button ion-button color="danger">
+              <ion-icon name="trash"></ion-icon>
+              Delete
+            </button>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
+
+      <ion-list *ngIf="friends.length > 0">
+        <ion-list-header>
+          Your Friends
+        </ion-list-header>
+        <ion-item-sliding *ngFor="let friend of friends">
+          <ion-item id="thread-item" no-lines>
+            <ion-avatar item-start (tap)="avatarClick(friend)">
+              <img [src]="friend.avatar">
+            </ion-avatar>
+            <h2>{{friend.username}}</h2>
+          </ion-item>
+          <ion-item-options side="left">
+            <button ion-button color="danger">
+              <ion-icon name="trash"></ion-icon>
+              Delete
+            </button>
+          </ion-item-options>
+        </ion-item-sliding>
+
+      </ion-list>
+    </ion-grid>
+  </div>
+</ion-content>
+
+
+
+
+
+
+
+
+
+
+  <!-- <div class ="square-background">
+  </div> !-->
+
+  <!-- <ion-row justify-content-center class="top-spacing">
       <ion-avatar *ngIf="user" class= "profile-shift">
         <img [src]="imagePath" class = "avatar-border">
       </ion-avatar>
@@ -34,7 +204,7 @@
     <h4 *ngIf="user" no-margin text-center ion-text color = "white" style = "position: relative;">{{user.username}}</h4>
     <p *ngIf="user && (user.stance)" text-center ion-text color = "white" (tap)= "changeStance()" no-margin style = "position: relative;"> Stance: {{user.stance}} </p>
     <p *ngIf="user && (user.stance == '' || !user.stance)" text-center ion-text color = "white" (tap)= "changeStance()" no-margin style = "position: relative;"> Set stance! </p>
-
+ -->
 
 <!-- User avatar and info - END -->
 <!-- I made thi stuff a long time ago, it can probably be removed ==TJ -->
@@ -70,7 +240,7 @@
   <!-- </button> -->
   <!-- Logout button - END -->
 
-<ion-grid style="background-color: #FFF" class="ion-grid">
+<!-- <ion-grid style="background-color: #FFF" class="ion-grid">
   <ion-row style="backround-color: #628" class="ion-top-row">
     <ion-col col-6 style="background-color: #ffffff" (tap)= "mySpotsPage()" class="grid-border" class="ion-left-col"> My Spots
       <p> </p>
@@ -95,4 +265,4 @@
 
 
 
-</ion-content>
+</ion-content> -->
