--- a/skatehub/src/pages/seshes/seshes.html
+++ b/skatehub/src/pages/seshes/seshes.html
@@ -6,9 +6,9 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Session</ion-title>
-    <ion-buttons *ngIf="!hasJoined" end right (tap) = "joinSession()">
+    <ion-buttons *ngIf="!hasJoined && !isUser" end right (tap) = "joinSession()">
       <button ion-button>
         Join Session
       </button>
